force-app/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
    <label>Integration Log</label>
    <pluralLabel>Integration Logs</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Integration Log Number</label>
        <displayFormat>IL-{000000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Audit + dead-letter record for every external integration call (ERP, logistics, payments). Captures direction, system, status, request/response, error, related record, and retry count. Backbone of Phase 4 resilience (retry + dead-letter) and the Trusted WAF pillar. OWD Private. See Phase 4 discovery (ADR candidate P4-3/P4-6).</description>
</CustomObject>