force-app/main/default/objects/Integration_Log__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <type>Text</type>
    <length>255</length>
    <description>The URL/named credential the call was made to.</description>
</CustomField>