force-app/main/default/objects/Integration_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <type>LongTextArea</type>
    <length>4000</length>
    <description>Exception/error detail when Status is Failed/Dead Letter.</description>
</CustomField>