force-app/main/default/objects/Integration_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <type>Text</type>
    <length>18</length>
    <description>Soft reference (record Id) to the Salesforce record this call concerns (e.g. the Order, Product). Text not lookup because it can point to multiple object types.</description>
</CustomField>