force-app/main/default/objects/Integration_Log__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <label>Retry Count</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>How many times this call has been retried. Drives escalation to Dead Letter after a threshold.</description>
</CustomField>