force-app/main/default/objects/Integration_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <description>Outcome of the integration call. Failed/Retrying drive the dead-letter + retry logic.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Success</fullName><default>false</default><label>Success</label></value>
            <value><fullName>Failed</fullName><default>true</default><label>Failed</label></value>
            <value><fullName>Retrying</fullName><default>false</default><label>Retrying</label></value>
            <value><fullName>Dead_Letter</fullName><default>false</default><label>Dead Letter</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>