force-app/main/default/objects/Integration_Log__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <type>Picklist</type>
    <description>The external system this call targets/originates from.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>ERP</fullName><default>true</default><label>ERP</label></value>
            <value><fullName>Logistics</fullName><default>false</default><label>Logistics</label></value>
            <value><fullName>Payments</fullName><default>false</default><label>Payments</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>